--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,14 @@
         line-height: 1.5rem;
     }
 
-    .banner {
+    .banner-mobile {
         width: 100%;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
         color: hsl(212, 21%, 14%);
+    }
+    .banner-desktop {
+        display: none;
     }
 
     h1 {
@@ -76,6 +79,92 @@
 
     .cart-icon {
         margin: 0 0.5rem;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    body {
+        background-color: hsl(30, 38%, 92%);
+        height: 100%;
+        display: flex;
+    }
+
+    main {
+        display: flex;
+        width: 50vw;
+        height: 60vh;
+        margin: auto;
+        margin-block: 25vh;
+        background-color: white;
+        border-radius: 10px;
+    }
+
+    section {
+        width: 50%;
+        padding: 1rem 1.2rem;
+    }
+
+    .banner-desktop {
+        width: 50%;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+
+    }
+
+    .banner-mobile {
+        display: none;
+    }
+    p {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 17px;
+        font-weight: 500;
+        color: hsl(228, 12%, 48%);
+        line-height: 1.5rem;
+    }
+    .perfume {
+        letter-spacing: 0.5ch;
+    }
+
+    h1 {
+        margin-top: 0;
+        font-family: "Fraunces", sans-serif;
+        font-size: 2.5em; ;
+    }
+
+    .price-section {
+        display: flex;
+        align-items: center;
+    }
+    button {
+        display: flex;
+        width: 90%;
+        justify-content: center;
+        align-items: center;
+        margin-inline: auto;
+        margin-bottom: 1em;
+        background-color: hsl(158, 36%, 37%);
+        border-radius: 10px;
+        border: none;
+
+    }
+
+    .cart-icon {
+        margin: 0 0.5rem;
+    }
+    
+    .crossed-price {
+        text-decoration: line-through;
+    }
+
+    .button-text {
+        color: white;
+    }
+    h2 {
+        margin-right: 1.2rem;
+        font-size: 2.2rem;
+        font-family: "Fraunces", sans-serif;
+        color: hsl(158, 36%, 37%);
+        
     }
 }
 
