--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
         margin: 1.7rem auto;
         background-color: hsl(0, 0%, 100%);
         border-radius: 10px;
+        cursor: auto;
 
     }
     section {
@@ -61,6 +62,7 @@
         background-color: hsl(158, 36%, 37%);
         border-radius: 10px;
         border: none;
+        cursor: pointer;
 
     }
 
@@ -97,6 +99,7 @@
         margin-block: 25vh;
         background-color: white;
         border-radius: 10px;
+        cursor: default;
     }
 
     section {
@@ -145,6 +148,7 @@
         background-color: hsl(158, 36%, 37%);
         border-radius: 10px;
         border: none;
+        cursor: pointer;
 
     }
 
